Usage text spacing issue fixed.

--- a/src/UILibrary.css
+++ b/src/UILibrary.css
@@ -171,7 +171,10 @@
 .component-usage-container {
 	position: relative;
 	width: 100%;
-	height: 160px;
+	height: 500px;
+	box-sizing: border-box;
+	padding: 5px;
+	overflow-y: scroll;
 }
 
 .component-usage-info-container {
@@ -184,16 +187,27 @@
 .components-usage-example-container {
 	position: relative;
 	width: 100%;
-	height: 100px;
+
 	margin-top: 20px;
 	box-sizing: border-box;
 }
 
 .components-usage-example-container pre {
-	position: absolute !important;
+	position: relative !important;
+	display: block;
 	width: 100%;
 	font-size: 14px !important;
 	box-sizing: border-box;
+	opacity: 1;
+}
+
+.components-usage-example-container pre code {
+	position: relative !important;
+	display: block;
+	width: 100px;
+	font-size: 14px !important;
+	box-sizing: border-box;
+	opacity: 1;
 }
 
 .components-usage-description-container {
